tests/files/flow_controller_tests/should_run/071.cmdr
x = 8;
print tan(x);