tests/files/flow_controller_tests/should_fail/048.cmdr
x = false;
print tan(x);